<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    	
	<item android:id="@+id/itemSatellite" android:title="@string/titleSatellite"
    android:icon="@drawable/i_satellite" android:showAsAction="ifRoom"></item>
	
	<item android:id="@+id/itemStreets" android:title="@string/titleStreets"
    android:icon="@drawable/i_highway" android:showAsAction="ifRoom"></item>
	
	<item android:id="@+id/itemIdentify" android:title="@string/titleIdentify"
    android:icon="@drawable/id_off" android:showAsAction="ifRoom"></item>
	
	<item android:id="@+id/itemFullExtent" android:title="@string/titleFullExtent"
    android:icon="@drawable/i_overview" android:showAsAction="ifRoom"></item>
	
	<item android:id="@+id/itemSearch" android:title="@string/titleSearch"
    android:icon="@drawable/binoculars" android:showAsAction="ifRoom"></item>
        
	<item android:id="@+id/itemDraw" android:title="@string/titleDraw"
    android:icon="@drawable/draw" android:showAsAction="ifRoom"></item>

	<item android:id="@+id/itemMeasure" android:title="@string/titleMeasure"
    android:icon="@drawable/ruler" android:showAsAction="ifRoom"></item>
	
	<item android:id="@+id/itemMyLocation" android:title="@string/titleLoc"
    android:icon="@drawable/legend" android:showAsAction="ifRoom"></item>
	
	<!--  <item android:id="@+id/itemLegend" android:title="@string/titleLegend"
    android:icon="@drawable/user" android:showAsAction="ifRoom"></item> -->
	
	<item android:id="@+id/itemPrefs" android:title="@string/titlePrefs"
    android:icon="@android:drawable/ic_menu_preferences" android:showAsAction="ifRoom"></item>

</menu>